# onramp-assignments-LeenHarfoush

./: .gitignore
.github/workflows/: rag-scraper-ci.yml
Distributed-RAG-Based-Web-Scraper-Framework/: .dockerignore  .gitignore  README.md  Report.md  docker-compose.yml
Distributed-RAG-Based-Web-Scraper-Framework/api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
Distributed-RAG-Based-Web-Scraper-Framework/api/src/api/: deps.py  main.py  schemas.py
Distributed-RAG-Based-Web-Scraper-Framework/api/tests/: conftest.py  test_ask.py  test_errors.py  test_pages.py  test_processed_pages.py  test_search.py
Distributed-RAG-Based-Web-Scraper-Framework/scraper/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
Distributed-RAG-Based-Web-Scraper-Framework/scraper/src/scraper/: celery_app.py  chunk.py  crawl.py  db.py  demo.py  demo_js.py  demo_pagination.py  demo_rag.py  demo_versioning.py  embed.py  enqueue_crawl.py  fetch.py  fetch_js.py  generate.py  paginate.py  parse.py  process.py  rag.py  rate_limit.py  retrieve.py  robots.py  scale_compare.py  schemas.py  sites.py  tasks.py  worker.py
Distributed-RAG-Based-Web-Scraper-Framework/scraper/tests/: test_chunk.py  test_crawl.py  test_fault_tolerance.py  test_fetch.py  test_fetch_js.py  test_paginate.py  test_parse.py  test_process.py  test_rag.py  test_rate_limit.py  test_retrieve.py  test_robots.py  test_sites.py  test_smoke.py  test_tasks.py
tailwind-assignment/: package-lock.json  package.json  tailwind.config.js
tailwind-assignment/css/: input.css
(+21 files in other folders)
