[project]
name = "scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: launches a real headless browser (Playwright); skipped unless RUN_BROWSER_TESTS=1",
    "db: hits a real Postgres+pgvector via DATABASE_URL; skipped unless RUN_DB_TESTS=1",
]
